<resources>
    <string name="app_name">Instagram</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="underlined"><u><b>  here</b></u></string>
    <string name="title_activity_sign_up" translatable="false">SignUpActivity</string>
    <string name="title_activity_edit_profile" translatable="false">EditProfileActivity</string>
    <string name="title_activity_edit_email" translatable="false">EditEmailActivity</string>
    <string name="title_activity_edit_phone_number" translatable="false">EditPhoneNumberActivity</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="title_activity_options" translatable="false">OptionsActivity</string>
    <string name="title_activity_change_password" translatable="false">ChangePasswordActivity</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="disclaimer1">"<b>#1</b> This app is a clone of the World's most famous social app Instagram,         developed and maintaned by Facebook Inc. "</string>
    <string name="disclaimer2"><b>#2</b> This app does not use Instagram\'s real servers and content, it has own server
and data mostly used for demo purposes</string>
    <string name="disclaimer3">"<b>#3</b> Any data stored in this app is not related in any way to Instagram or Facebook Inc. "</string>
    <string name="disclaimer4"><b>#4</b> This app is never going to be live on Google Play because it\'s main purpose is not to copy the real Instagram.</string>
    <string name="desc">I wanted to create a clone of the world\'s most famous social application Instagram,
to improve and strengthen my skills as Android developer. </string>
    <string name="comments">Please leave your comments on my email <u>d.miloshevski@gmail.com</u></string>
    <string name="privacy_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="terms" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam
corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui
in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="contact1">#1 via email <u>d.miloshevski@gmail.com</u></string>
    <string name="contact2">#2 via direct messages on my social media accounts</string>
    <string name="hiring">If you want to hire me for an Android project please follow as specified below:</string>
    <string name="company">Company: iamdamjanmiloshevski.com</string>
    <string name="information">Information:</string>
    <string name="developer">Developer: Damjan Miloshevski</string>
    <string name="Disclaimer" translatable="false">Disclaimer:</string>
    <string name="contact3">#3 via Whatsapp, SMS orViber</string>
    <string name="terms_use">Terms of Use:</string>
    <string name="terms_text" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="rights">All rights reserved.</string>
    <string name="copyrights" translatable="false">© iamdamjanmiloshevski.com, 2018</string>
    <string name="developer_email" translatable="false">d.miloshevski@gmail.com</string>
    <string name="subject_hiring" translatable="false">Job proposal for Android project</string>
    <string name="subject_comments" translatable="false">Feedback
on your Instagram Clone app</string>
    <string name="subject_share" translatable="false">Check this app out!</string>
    <string name="content_share" translatable="false">Hey, try out this app from <u>https://github.com/damsii/instagram-clone</u></string>
    <string name="subject_forgot_password" translatable="false">Instagram Clone: Forgotten password</string>
    <string name="message_forgot_pass" translatable="false">Hey, I forgot my password. Can you please reset it and send it to me?
    My username is:</string>
    <string name="email" translatable="false"><u>d.miloshevski@gmail.com</u></string>
    <string name="title_activity_photo" translatable="false">PhotoActivity</string>
    <string name="title_activity_edit_info" translatable="false">EditInfoActivity</string>
    <string name="message" translatable="false">Hello. I wanted to say hi, I like your app.</string>
    <string name="sex1">Not Specified</string>
    <string name="sex2">Male</string>
    <string name="sex3">Female</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"> <u><b>Sign up</b></u> </string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in"><u><b>Sign in</b></u></string>
    <string name="title_activity_language" translatable="false">LanguageActivity</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change Email</string>
    <string name="edit_info">Edit Info</string>
    <string name="signing_in">Signing in...</string>
    <string name="login">Log in</string>
    <string name="options">Options</string>
    <string name="photo">Photo</string>
    <string name="registering">Registering...</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_this_post">Delete this post?</string>
    <string name="don_t_delete">Don\'t delete</string>
    <string name="forgot_password_email_me_at">Forgot password? Email me at</string>
    <string name="current">Current</string>
    <string name="verify">Verify</string>
    <string name="new1">New</string>
    <string name="you_ll_not_receive_sms_updates_from_instagram_because_this_is_a_clone_amp_it_s_not_related_to_instagram_at_any_case"><![CDATA[You\'ll not receive SMS updates from Instagram, because this is a clone & it\'s not related to Instagram at any case]]></string>
    <string name="change_photo">Change photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="web" translatable="false">Web</string>
    <string name="bio">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="english_united_states" translatable="false">English (United States)</string>
    <string name="macedonian_macedonia_republic_of" translatable="false">Македонски (Македонија)</string>
    <string name="account">Account</string>
    <string name="change_password1">Change Password</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="share_app">Share app</string>
    <string name="log_out">Log out</string>
    <string name="message1">Message</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="tap_to_add_photo">Tap to add photo</string>
    <string name="posting">Posting...</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="clear">Clear</string>
    <string name="post">Post</string>
    <string name="empty_email">Email cannot be empty!</string>
    <string name="valid_email">Please enter a valid email!</string>
    <string name="password_error">Passwords must be at least 6 characters</string>
    <string name="password_match">Passwords don\'t match!</string>
    <string name="privacy_policy">Privacy Policy:</string>
    <string name="logout">Log out</string>
    <string name="logout_msg">Are you sure that you want to log out?</string>
    <string name="no_feeds_yet">No feeds yet! :(</string>
    <string name="error_username">Invalid username</string>
    <string name="error_password">Invalid password</string>
    <string name="password_required">Password is required</string>
    <string name="blank_password">Password cannot be missing or blank</string>
    <string name="taken_username">This username is already taken!</string>
</resources>
