<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iamdamjanmiloshevski.instagramclone.activity.AboutActivity"
    tools:showIn="@layout/activity_about">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">


            <TextView
                android:id="@+id/disclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Disclaimer"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/disclaimer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/disclaimer"
                android:text="@string/disclaimer1" />

            <TextView
                android:id="@+id/disclaimer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/disclaimer1"
                android:layout_marginTop="5dp"
                android:text="@string/disclaimer2" />

            <TextView
                android:id="@+id/disclaimer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/disclaimer2"
                android:layout_marginTop="5dp"
                android:text="@string/disclaimer3" />

            <TextView
                android:id="@+id/disclaimer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/disclaimer3"
                android:layout_marginTop="5dp"
                android:text="@string/disclaimer4" />

            <TextView
                android:id="@+id/developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/disclaimer4"
                android:layout_marginTop="15dp"
                android:text="@string/developer" />

            <TextView
                android:id="@+id/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/developer"
                android:layout_marginTop="2dp"
                android:text="@string/company" />

            <TextView
                android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/company"
                android:layout_marginTop="10dp"
                android:text="@string/information"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/information"
                android:layout_marginTop="5dp"
                android:text="@string/desc" />

            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cause"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                android:text="@string/comments" />

            <TextView
                android:id="@+id/hiring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/comments"
                android:layout_marginTop="5dp"
                android:text="@string/hiring" />

            <TextView
                android:id="@+id/contact1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hiring"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/contact1" />

            <TextView
                android:id="@+id/contact2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/contact1"
                android:text="@string/contact2" />

            <LinearLayout
                android:id="@+id/social"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/contact2"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/fb" />

                <ImageView
                    android:id="@+id/instagram"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/instagram" />

                <ImageView
                    android:id="@+id/linkedIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/linkedin" />
            </LinearLayout>

            <TextView
                android:id="@+id/contact3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/social"
                android:layout_marginTop="5dp"
                android:text="@string/contact3" />

            <LinearLayout
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/contact3"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/whatsapp" />

                <ImageView
                    android:id="@+id/sms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/mobile"
                    android:layout_weight="1"
                    android:src="@drawable/sms" />

                <ImageView
                    android:id="@+id/viber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/viber" />

            </LinearLayout>

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobile"
                android:layout_marginTop="10dp"
                android:text="Privacy Policy:"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/privacy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_policy"
                android:layout_marginTop="5dp"
                android:text="@string/privacy_text" />

            <TextView
                android:id="@+id/terms_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text"
                android:layout_marginTop="10dp"
                android:text="@string/terms_use"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/terms_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/terms_use"
                android:layout_marginTop="5dp"
                android:text="@string/terms_text" />

            <TextView
                android:id="@+id/rights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/terms_text"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/rights" />

            <TextView
                android:id="@+id/copyrights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rights"
                android:layout_marginTop="2dp"
                android:gravity="center_horizontal"
                android:text="@string/copyrights" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
