<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sf"
    android:orientation="vertical"
    tools:context="com.iamdamjanmiloshevski.instagramclone.activity.LoginActivity">

    <!-- Login progress -->
    <RelativeLayout
        android:id="@+id/progress_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_progress"
            android:layout_centerHorizontal="true"
            android:text="@string/registering"
            android:textColor="#d3d3d3"
            android:textSize="14sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/registerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ScrollView
                android:id="@+id/register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="10dp"
                        android:textColorHint="#000">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:hint="@string/prompt_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColorHint="#000" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColorHint="#000">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_register_short"
                            android:imeOptions="actionGo"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColorHint="#000" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/register_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="120dp"
                        android:gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="#0099CC"
                        android:textSize="22sp"
                        android:textStyle="bold" />


                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bbc3cc" />

            <TextView
                android:id="@+id/haveaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/already_have_an_account"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/haveaccount"
                android:paddingBottom="10dp"
                android:paddingLeft="3dp"
                android:paddingTop="10dp"
                android:text="@string/sign_in"
                android:textColor="#fff" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
